--- a/latex/an10/ha03.tex
+++ b/latex/an10/ha03.tex
@@ -121,7 +121,7 @@ Und $\forall a \in A \colon a \leq s$ entspricht $s = \sup A$/
   \]
   \emph{Induktionsanfang}
   \[
-    A(1) colon (a^n)^1 = a^{n * 1} = (a^1)^n (= a^n) 
+    A(1) \colon (a^n)^1 = a^{n * 1} = (a^1)^n (= a^n) 
   \]
   Diese Aussage ist wahr. \\
   \emph{Induktionsschritt}
@@ -138,7 +138,7 @@ Und $\forall a \in A \colon a \leq s$ entspricht $s = \sup A$/
   \]
   \emph{Induktionsanfang}
   \[
-    B(1) colon a^1 * b^1 = (a * b)^1 
+    B(1) \colon a^1 * b^1 = (a * b)^1 
   \]
   Diese Aussage ist wahr. \\
   \emph{Induktionsschritt}
