--- a/latex/an10/ha04.tex
+++ b/latex/an10/ha04.tex
@@ -41,13 +41,14 @@
   \[
     P(n) \colon \sum\limits_{k = 1}^n k^2 = \frac{1}{6} n (n + 1) (2n + 1)
   \]
-  \emph{Induktionsanfang}:
+  \emph{Induktionsanfang}: 
   \begin{align*}
     P(1) &\colon \sum\limits_{k = 1}^n k^2 = \frac{1}{6} * 1 * (1 + 1) (2 * 1 + 1) \\
          &\colon 1^2 = \frac{1}{6} * 1 * 2 * 3 \\
          &\colon 1 = \frac{1 * 2 * 3}{6} = \frac{6}{6} = 1 \\
   \end{align*}
-  \emph{Induktionsschritt}:
+  \emph{Induktionsschritt}: Die Behauptung $P(n)$ sei wahr für ein $n \in \mathbb{N}$,
+  dann gilt \\
   \begin{align*}
     P(n + 1) \colon \sum\limits_{k = 1}^n k^2 &= \frac{1}{6} * n * (n + 1) (2n + 1) + (n + 1)^2 \\
                                               &= \frac{1}{6} * (n^2 + 1) (2n + 1) + \frac{6n^2 + 12n + 6}{6} \\
@@ -58,6 +59,10 @@
                                               &= \frac{(n + 1)(n + 2)(2n + 3)}{6} \\
                                               &= \frac{1}{6} * (n + 1) (n + 2) (2n + 3)\\
   \end{align*}
+
+  Somit ist die Behauptung wahr für $n + 1$.
+  Aus dem Satz über die vollständige Induktion folgt die Behauptung.
+  
 \item
   \begin{align*}
     2^1 &\nleq 1! \\
@@ -77,7 +82,8 @@
     P(4) \colon 2^4 &\leq 4! \\
                  16 &\leq 24 \\
   \end{align*}
-  \emph{Induktionsschritt}
+  \emph{Induktionsschritt}: Die Behauptung $P(n)$ sei wahr für ein $n \in \mathbb{N}$,
+  dann gilt \\
   \begin{align*}
     P(n + 1) \colon 2^{n + 1} &\leq (n + 1)! \\
                       2^n * 2 &\leq n! * (n + 1) \\
@@ -103,7 +109,9 @@
     Aus den Folgerungen aus den Anordnungsaxiomen (1.2.3 (e) in der Vorlesung) folgt nun
     
     $2 * c < (n + 1) * c$.
-  \end{minipage}
+  \end{minipage} \\
+  Somit ist die Behauptung wahr für $n + 1$.
+  Aus dem Satz über die vollständige Induktion folgt die Behauptung.
 
 \newpage
 \item Für $a \in \mathbb{R}$ gilt $s_n = \sum\limits_{k = 1}^n a^{2k - 1} = \frac{a(a^{2n} - 1)}{a^2 - 1}, n \in \mathbb{N}$ \\
@@ -118,7 +126,7 @@
                                                a &= a * 1 = a \\
   \end{align*}
 
-  \emph{Induktionsschritt}:
+  \emph{Induktionsschritt}:  Die Behauptung $P(n)$ sei wahr für ein $n \in \mathbb{N}$,
   \begin{align*}
     P(n + 1) \colon \sum\limits_{k = 1}^{n + 1} a^{2k - 1} &= \frac{a(a^{2(n + 1)} - 1)}{a^2 - 1}  \\
                                                            &= \frac{a(a^{2n + 2} - 1)}{a^2 - 1}  \\
@@ -128,6 +136,7 @@
                                                            &= \frac{a(a^{2n} - 1)}{a^2 - 1} + \frac{a^{2n + 1} * (a^2 - 1)}{a^2 - 1}  \\
                                                            &= \frac{a(a^{2n} - 1)}{a^2 - 1} + a^{2n + 1}  \\
   \end{align*}
+  Somit ist die Behauptung wahr für $n + 1$. Aus dem Satz über die vollständige Induktion folgt die Behauptung.
 \end{enumerate}
 
 \newpage
